--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,8 @@ flex-basis: calc(33% -6rem);
 }
 .cartao__conteudo__pergunta,
 .cartao__conteudo__resposta {
-bac
+backface-visibility: hidden;
+}
 footer {
 background-color: black;
 color: white;
